--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Cursos</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Impartidos por el departamento de formación de Genometra.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -109,9 +109,12 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Ultimo curso</h4>
-                    <p class="text-muted">Curso de introducción al lenguaje estadístico R</p>
+                    <p class="text-muted">
+		      Curso de introducción al lenguaje estadístico <strong>R</strong> <br>
+		      <a href="#portfolioModalcurso_valencia" class="portfolio-link" data-toggle="modal"> Ver Programa </a>
+		    </p>
 
-<a href="#portfolioModalcurso_valencia" class="portfolio-link" data-toggle="modal"> Curso de introducción al lenguaje estadístico R </a>
+
 
                 </div>
                 <div class="col-md-4">
@@ -128,9 +131,26 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Personaliza tu curso</h4>
-                    <p class="text-muted">En Genometra te ayudamos a prepara tu curso de formacion en bioinformatica, bioetadistica, programacion...</p>
+                    <p class="text-muted">En Genometra preparamos cursos de formación a tu medida: Bioinformática, Estadística, Programación... 
+		      <br> <a href="http://www.genometra.com/contact/">Contacta con nosotros</a> </p>
                 </div>
             </div>
+        </div>
+    </section>
+
+<!-- Services Section -->
+    <section id="cursos-proximos">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Proximos Cursos</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                </div>
+            </div>
+
+Proximos cursos aquí
+
         </div>
     </section>
 
@@ -155,8 +175,8 @@
                         <img src="img/portfolio/logor.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Curso R</h4>
-                        <p class="text-muted">introducción al lenguaje estadístico</p>
+                        <h4>Introduccion R</h4>
+                        <p class="text-muted">introducción al lenguaje estadístico <br> Valencia del 23 al 27 de Marzo 2015</p>
                     </div>
                 </div>
             
@@ -527,28 +547,80 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Curso R</h2>
+                            <h2>Introduccion R</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/logor.png" class="img-responsive img-centered" alt="image-alt">
-                            <p>Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.</p>
-<hr>
-<p>una cosa</p>
+                            <p>El curso está organizado en cuatro sesiones de 4 hora de duración cada una. Se impartira los dias 23, 24, 25 y 26 de Mayo en el <a href="http://www.galileogalilei.com/contacto/" target="_blank">Colegio Mayor Galileo Galilei</a> de Valencia. <a href="http://www.genometra.com/cursos/curso_r_2015_03/">Ver inscripcón</a></p>
+
+
+<div class="contenido-cursos">
+<hr />
+
+<h1 id="dia-1">Dia 1</h1>
 
 <ul>
-  <li>Cosa</li>
-  <li>cosa</li>
+  <li>intro</li>
+  <li>vectores</li>
+  <li>
+    <p>matrices</p>
+  </li>
+  <li>listas</li>
+  <li>RStudio : scripts para la practica de listas</li>
+  <li>dataframes</li>
+  <li>lectura/escritura</li>
 </ul>
 
-<p>mas</p>
+<p><a href="materiales/hola.txt">materiales</a></p>
 
+<p><a href="materiales/hola.zip">materiales zip</a></p>
+
+<h1 id="dia-2">Dia 2</h1>
+
+<p>Gráficas: 
+- dispersión, colores, titulos LINEAS
+- histogramas y barras, 
+- box-plots
+- extras quesos</p>
+
+<p>estadística descriptiva.
+- summary, media, mediana
+- T test, 
+- ks
+- Modelos de regresión. 1h</p>
+
+<h1 id="dia-3">Dia 3</h1>
+
+<ul>
+  <li>Programación de funciones</li>
+  <li>Sentencias condicionales</li>
+  <li>
+    <p>Bucles</p>
+  </li>
+  <li>Ejemplos</li>
+</ul>
+
+<h1 id="extras">Extras</h1>
+
+<ul>
+  <li>fechas</li>
+  <li>parseo</li>
+  <li>manejo ficheros</li>
+</ul>
+
+<p>Gestión de ficheros: copiar, renombrar, borrar, …</p>
+
+<hr />
+
+
+</div>
 
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com"></a>
+                                    <strong><a href="http://startbootstrap.com">micliente</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">Marzo 2015</a>
                                     </strong>
                                 </li>
                                 <li>Service:
@@ -580,19 +652,13 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/dreams.png" class="img-responsive img-centered" alt="image-alt">
                             <p>Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.</p>
-<hr>
-<p>mufs
-ffsadfsdf
-dsffs
-sdaff
-dsfa
-fsda</p>
 
-<ul>
-  <li>asfau</li>
-  <li>ad</li>
-  <li>agsa</li>
-</ul>
+
+<div class="contenido-cursos">
+<p>HOLA</p>
+
+
+</div>
 
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -632,8 +698,12 @@ fsda</p>
                             <hr class="star-primary">
                             <img src="img/portfolio/escape.png" class="img-responsive img-centered" alt="image-alt">
                             <p>Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.</p>
-<hr>
 
+
+<div class="contenido-cursos">
+
+
+</div>
 
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -673,8 +743,12 @@ fsda</p>
                             <hr class="star-primary">
                             <img src="img/portfolio/golden.png" class="img-responsive img-centered" alt="image-alt">
                             <p>Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.</p>
-<hr>
 
+
+<div class="contenido-cursos">
+
+
+</div>
 
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -714,8 +788,13 @@ fsda</p>
                             <hr class="star-primary">
                             <img src="img/portfolio/roundicons.png" class="img-responsive img-centered" alt="image-alt">
                             <p>Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.</p>
-<hr>
 
+
+<div class="contenido-cursos">
+<p>ADIOS</p>
+
+
+</div>
 
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -755,8 +834,12 @@ fsda</p>
                             <hr class="star-primary">
                             <img src="img/portfolio/treehouse.png" class="img-responsive img-centered" alt="image-alt">
                             <p>Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.</p>
-<hr>
 
+
+<div class="contenido-cursos">
+
+
+</div>
 
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -796,8 +879,12 @@ fsda</p>
                             <hr class="star-primary">
                             <img src="img/portfolio/startup-framework.png" class="img-responsive img-centered" alt="image-alt">
                             <p>Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.</p>
-<hr>
 
+
+<div class="contenido-cursos">
+
+
+</div>
 
                             <ul class="list-inline item-details">
                                 <li>Client:
